.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-phoneinfoga-app
  name: demo-phoneinfoga-app-svc
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 5000
  selector:
    app: demo-phoneinfoga-app
