.deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-phoneinfoga-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: demo.phoneinfoga.crvx.fr
      http:
        paths:
          - backend:
              serviceName: demo-phoneinfoga-app-svc
              servicePort: http
            path: /
  tls:
    - hosts:
        - demo.phoneinfoga.crvx.fr
      secretName: demo-phoneinfoga-tls
